--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,29 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+
+
+<div class="row">
+<div class="col">
+
+  {{#with meta}}
+    {{#if title}}
+      <p class="lead">{{title}}</p>
+    {{/if}}
+  {{/with}}
+
+  <div class="row">
+  <div class="col p-3">
+
+    {{#each data}}
+    <div class="row">
+    <div class="col p-3">
+      <div class="message">
+        <p class="">{{title}}/{{id}}{{message}}</p>
+      </div>
+    </div>
+    </div>
+    {{/each}}
+
+  </div>
+  </div>
+
+</div>
+</div>
